Fixed blog links.

--- a/app/assets/index_old_browser.html
+++ b/app/assets/index_old_browser.html
@@ -75,7 +75,7 @@
           <a class="brand" href="/"><img alt="CodeCombat" src="/images/pages/base/logo.png" title="CodeCombat"></a>
 
           <ul class="navbar-link-text nav pull-right">
-            <li class="blog"><a data-i18n="nav.blog" href="http://code-combat.tumblr.com/">Blog</a></li>
+            <li class="blog"><a data-i18n="nav.blog" href="http://blog.codecombat.com/">Blog</a></li>
 
             <li class="forum"><a data-i18n="nav.forum" href="http://discourse.codecombat.com/">Forum</a></li>
           </ul>
