--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -76,8 +76,8 @@
     // Additional JS functions here
     window.fbAsyncInit = function() {
       FB.init({
-        appId      : '148832601965463', // App ID
-        channelUrl : 'http://codecombat.com/channel.html', // Channel File
+        appId      : document.location.origin === 'http://localhost:3000' ? '607435142676437' : '148832601965463', // App ID
+        channelUrl : document.location.origin +'/channel.html', // Channel File
         status     : true, // check login status
         cookie     : true, // enable cookies to allow the server to access the session
         xfbml      : true  // parse XFBML
