Moved antiscroll init; disabled it for now because of bugginess.

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -111,11 +111,14 @@
 
   <header class="header-container" id="header-container"></header>
   
+  <div id="page-container"></div>
+  <!--
   <div class="antiscroll-wrap">
     <div class="antiscroll-inner">
       <div id="page-container"></div>
     </div>
   </div>
+  -->
 
   <div id="modal-wrapper"></div>
 
@@ -158,12 +161,5 @@
     (function(a){if(window.filepicker){return}var b=a.createElement("script");b.type="text/javascript";b.async=!0;b.src=("https:"===a.location.protocol?"https:":"http:")+"//api.filepicker.io/v1/filepicker.js";var c=a.getElementsByTagName("script")[0];c.parentNode.insertBefore(b,c);var d={};d._queue=[];var e="pick,pickMultiple,pickAndStore,read,write,writeUrl,export,convert,store,storeUrl,remove,stat,setKey,constructWidget,makeDropPane".split(",");var f=function(a,b){return function(){b.push([a,arguments])}};for(var g=0;g<e.length;g++){d[e[g]]=f(e[g],d._queue)}window.filepicker=d})(document);
   </script>
   <!-- end filepicker.io code -->
-  <!-- begin antiscroll code -->
-  <script type="text/javascript">  
-    $(function () {
-       $('.antiscroll-wrap').antiscroll();
-     });
-  </script>
-  <!-- end antiscroll code -->
 </body>
 </html>
