Improved page title. Fixed Twitter card image.

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -10,7 +10,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
-  <title>CodeCombat</title>
+  <title>CodeCombat - Learn how to code by playing a game</title>
   <meta name="description" content="Learn programming with a multiplayer live coding strategy game. You're a wizard, and your spells are JavaScript. Free, open source HTML5 game!">
 
   <meta property="og:title" content="CodeCombat: Multiplayer Programming">
