--- a/app/assets/main.html
+++ b/app/assets/main.html
@@ -35,6 +35,11 @@
   <!--[if IE 9]>     <script src="/javascripts/vendor_with_box2d.js"></script> <![endif]-->
   <!--[if !IE]><!--> <script src="/javascripts/vendor.js"></script>            <!--<![endif]-->
   <script src="/javascripts/app.js"></script> <!-- it's all Backbone! -->
+  
+  <script>
+    window.userObject = "userObjectTag";
+  </script>
+  
   <script>require('initialize');</script>
 
 
