Moved nanoscroller to bower components and related fixes.

--- a/app/assets/main.html
+++ b/app/assets/main.html
@@ -72,7 +72,7 @@
   <!-- end olark code -->
 
 </head>
-<body class="clearfix">
+<body class="nano clearfix">
   <div id="fb-root"></div>
 
 <!-- begin facebook code -->
@@ -162,21 +162,21 @@
   <!-- end filepicker.io code -->
 
   <!-- being nanascroller code -->
-  <script type="text/javascript">
+  <!--<script type="text/javascript">
     function renderScrollbar(){
       $('.nano-pane').css('display','none');
       $(function(){
-        $('body').nanoScroller();
+        $('.nano').nanoScroller();
       });
     };
 
     // Doesn't seem to load when you open for first time.
     $(function(){
       setTimeout(function(){
-        $('body').nanoScroller();
+        $('.nano').nanoScroller();
       },1000);
     });
-  </script>
+  </script>-->
   <!-- end nanoscroller code -->
 </body>
 </html>
