Split out aether from vendor.js. Should help #826.

--- a/app/assets/main.html
+++ b/app/assets/main.html
@@ -34,6 +34,7 @@
   <script src="/lib/ace/ace.js"></script>  
   <!--[if IE 9]>     <script src="/javascripts/vendor_with_box2d.js"></script> <![endif]-->
   <!--[if !IE]><!--> <script src="/javascripts/vendor.js"></script>            <!--<![endif]-->
+  <script src="/javascripts/aether.js"></script>
   <script src="/javascripts/app.js"></script> <!-- it's all Backbone! -->
   
   <script>
